--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -1,8 +1,9 @@
-body {
-  transition: background-color 2s ease;
-}
-
 .app {
+
+  .icon {
+    width: 30px;
+    height: 30px;
+  }
 
   .heading {
     text-align: center;
@@ -12,31 +13,13 @@ body {
       animation: slideInDown 1s;
       font-size: 25px;
       margin-top: 15px;
+      margin-right: 30px;
       line-height: 48px;
 
       strong {
         position: relative;
         font-weight: 500;
-
-        &::after {
-          background-image: url('../assets/images/hero-highlight.svg');
-          position: absolute;
-          height: 100%;
-          z-index: -1;
-          background-repeat: no-repeat;
-          background-size: 100%;
-          content: '';
-          top: 12%;
-          left: -2%;
-          width: 100%;
-        }
       }
-    }
-
-    &__description {
-      animation: slideInUp 1s;
-      font-size: 16px;
-      padding: 10px 0;
     }
   }
 
